# WorldEventsPipeline

./: README.md
world-event-mcp/: CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  run-dashboard.sh
world-event-mcp/src/world_event_mcp/: __init__.py  cache.py  cli.py  (+3 more)
world-events-mcp/: CLAUDE.md  README.md  pyproject.toml  world_events_mcp_colab.ipynb
world-events-mcp/src/world_events_mcp/: cache.py  circuit_breaker.py  cli.py  fetcher.py  server.py  utils.py
world-events-mcp/src/world_events_mcp/analysis/: __init__.py  alerts.py  clustering.py  dossier.py  escalation.py  exposure.py  instability.py  posture.py  signals.py  situation.py  spikes.py  temporal.py  world_brief.py
world-events-mcp/src/world_events_mcp/config/: __init__.py
world-events-mcp/src/world_events_mcp/dashboard/: app.py  index.html
world-events-mcp/src/world_events_mcp/sources/: __init__.py  ai_watch.py  arxiv_papers.py  aviation.py  central_banks.py  climate.py  conflict.py  cyber.py  displacement.py  economic.py  elections.py  environmental.py  fleet.py  geospatial.py  github_trending.py  hacker_news.py  health.py  infrastructure.py  intelligence.py  maritime.py  markets.py  military.py  news.py  nuclear.py  prediction.py  sanctions.py  seismology.py  service_status.py  shipping.py  social.py  space_weather.py  traffic.py  usa_spending.py  usni_fleet.py  webcams.py  wildfire.py
world-events-mcp/src/world_events_mcp/tests/: __init__.py  conftest.py  test_analysis.py  test_cache.py  test_sources.py
world-events-pipeline/: AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
world-events-pipeline/scripts/: run_pipeline.py
world-events-pipeline/tests/: test_models_and_utils.py  test_spike_detection.py
world-events-pipeline/world_events/: __init__.py  __main__.py  config.py  embeddings.py  llm.py  logging_utils.py  models.py  orchestrator.py  rate_limiter.py  utils.py
world-events-pipeline/world_events/agents/: __init__.py  base.py  cross_source_review.py  event_correlation.py  gdelt_rerank.py  gdelt_summary.py  mcp_enrichment.py  narrative_synthesis.py  news_search.py  plotting.py  query_input.py  spike_detection.py  structured_output.py  timeline_analysis.py
(+53 files in other folders)
