[project]
name = "world-events-mcp"
version = "0.1.0"
description = "World Events MCP Server - real-time global intelligence across 30+ domains with 89 MCP tools"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Phoenix AGI", email = "phoenix@2acrestudios.com"}
]
keywords = ["mcp", "intelligence", "osint", "markets", "geopolitical", "phoenix"]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "feedparser>=6.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=62.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "respx>=0.21.0",
]

[project.scripts]
world-events-mcp = "world_events_mcp.server:run"
intel = "world_events_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/world_events_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/world_events_mcp/tests"]
addopts = "-v --tb=short"
