[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "world-events-pipeline"
version = "0.2.0"
description = "Modular multi-agent geopolitical intelligence pipeline (GDELT + RSS + MCP + LLM)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31.0",
    "mcp>=1.0.0",
    "sentence-transformers>=2.7.0",
    "numpy>=1.24.0",
    "ollama>=0.2.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "rich>=13.0.0"]

[project.scripts]
world-events = "world_events.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["world_events*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"
